Supplementary alignments included.