@@ -7,7 +7,8 @@ sample_name=$1
 sample_input_file=$2 #Bam input into DRF program
 align_to_ref=$3 # Human Reference genome used in the alignment 
 DRF_jar=$4 #Path to DRF jar
-intervals=$5
+DRF_Stringency=$5 #DRF Stringency
+intervals=$6
 
 #Regex to Extract Sample name from Bam file
 # sm_regex="SM:([A-Za-z0-9_\-]+)"
@@ -27,10 +28,16 @@ min_depth=-1 #MAKE MIN_DEPTH = -1 ensures no bases are printed in LOW_COV_BED
 min_mapq_mass=-1 #MAKE MAPQ MASS = -1 ensures EVERY POSITION GETS PRINTED IN LOW_MAPQ_BED
 mapq_thresh=9 #gatk recommended cutoff
 low_cov_bed="/dev/null" # Nothing output to low_cov_bed since min_depth = -1
-low_mapq_bed="${sample_dir}/${sample_name}.min_depth_${min_depth}.min_mapq_mass_${min_mapq_mass}.mapq_thresh_${mapq_thresh}.dark.low_mapq.bed"
+low_mapq_bed="${sample_name}.min_depth_${min_depth}.min_mapq_mass_${min_mapq_mass}.mapq_thresh_${mapq_thresh}.dark.low_mapq.bed"
+#low_mapq_bed="${sample_dir}/${sample_name}.min_depth_${min_depth}.min_mapq_mass_${min_mapq_mass}.mapq_thresh_${mapq_thresh}.dark.low_mapq.bed"
 inc_bed="/dev/null" # No need to store incomplete bases for each sample
 
-if ! java -Xmx100G -jar $DRF_jar \
+
+java --version
+
+if ! java -Xmx475G -Xlog:gc*:gc.log \
+	-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/scratch/mewa283/LongReadDark/Dark_and_Camouflaged_genes/identify_dark_and_camouflaged_regions-NF/Run_ONT/runONT_HG38_noAlt_All1KG/heapdump.hprof \
+	-jar $DRF_jar \
 		-i "${sample_input_file}" \
 		--human-ref "${align_to_ref}" \
 		--min-region-size 1 \
@@ -41,8 +48,12 @@ if ! java -Xmx100G -jar $DRF_jar \
 		--low-coverage-bed-output "${low_cov_bed}" \
 		--low-mapq-bed-output "${low_mapq_bed}" \
 		--incomplete-bed-output "${inc_bed}" \
-		--interval-list "${intervals}"; then
+		--validation-stringency "${DRF_Stringency}" \
+		--include-supplementary-only
 
+		#--interval-list "${intervals}"
+
+then
 	echo "ERROR: DRF failed. Check logs for details."
 	exit 1
 fi
